# gtllm

./: Cargo.toml
assets/: tailwind.css
src/: main.rs
src/components/modes/: choice.rs  collaborative.rs  competitive.rs  pvp.rs  standard.rs
src/utils/: mod.rs  openrouter.rs  run_control.rs  types.rs
