[package]
name = "gtllm"
version = "0.2.0"
authors = ["Chironjit Das <chironjit@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.5.0"
dioxus = { version = "0.7.5", features = [] }
reqwest = {version = "0.13.2", features = ["json", "stream"]}
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.52.0", features = ["full"]}
dirs = "6.0.0"
futures = "0.3.32"
regex = "1.12.3"
serde_json = "1.0.149"
toml = "1.1.2"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
